Made the top bar fixed, started on mobile optimizations

--- a/main.css
+++ b/main.css
@@ -42,17 +42,42 @@ ul {
 	list-style-type: none;
 }
 
+/*Background for the header*/
+.header-background {
+	background-color: white;
+	filter: drop-shadow(0px 0px 6px #666);
+	height: 55px;
+	position: fixed;
+	top: 0px;
+	width: 100%;
+	z-index: 997;
+	-webkit-filter: drop-shadow(0px 0px 6px #666);
+}
+
+/*Hides header shadow until user scrolls*/
+.hide-shadow {
+	background-color: white;
+	height: 18px;
+	position: absolute;
+	top: 50px;
+	width: 100%;
+	z-index: 998;
+}
+
 /*Header - Links at the top of the page*/
 .header {
 	background-color: white;
+	left: 17%;
 	margin-top: 15px;
+	position: fixed;
 	text-align: center;
+	z-index: 999;
 }
 
 .header a {
-	border-color: white;
+	background-color: white;
+	border: 2px solid white;
 	border-radius: 10px;
-	border-right-color: white;
 	color: #a6a6a6;
 	font-family: 'Nanum Gothic', sans-serif;
 	font-size: 1.25rem;
@@ -66,8 +91,8 @@ ul {
 }
 
 .header a:hover{
-	background-color: #707070;
-	border-color: #707070;
+	background-color: #808080;
+	border-color: #808080;
 	color: white;
 	cursor: pointer;
 }
@@ -92,7 +117,7 @@ a.sign_up {
 a.sign_up:hover {
 	background-color: #DB4D52;
 	border-color: #DB4D52;
-	color: white;;
+	color: white;
 }
 
 /*Organized webpage using grid instead of box-model*/
@@ -364,6 +389,121 @@ a.sign_up:hover {
 	background-color: white;
 	color: #DB4D52; 
 }
+
+/*Mobile Optimizations*/
+@media screen and (max-width: 1025px), screen and (orientation: portrait) {
+	.menu {
+		background-color: clear;
+		border: 1px solid clear;
+		height: 30px;
+		position: fixed;
+		right: 25px;
+		top: 15px;
+		width: 35px;
+		z-index: 998;
+	}
+
+	#middleBar {
+		margin-top: 10px;
+	}
+
+	#bottomBar {
+		margin-top: 20px;
+	}
+
+	#topBar, #middleBar, #bottomBar {
+		background-color: #b3b3b3;
+		border: 1px solid #b3b3b3;
+		border-radius: 10px;
+		height: 3px;
+		position: fixed;
+		right: 28px;
+		top: 18px;
+		width: 30px;
+		z-index: 999;
+	}
+
+	.menu:hover #topBar, .menu:hover #middleBar, .menu:hover #bottomBar {
+		background-color: #707070;
+		border: 1px solid #707070;
+		transition-duration: 0.4s;
+		-webkit-transition-duration: 0.4s;
+	}
+
+	/*Links*/
+	.header-background {
+		background-color: white;
+		filter: drop-shadow(0px 0px 6px #666);
+		height: 55px;
+		position: fixed;
+		top: 0px;
+		width: 100%;
+		z-index: 990;
+		-webkit-filter: drop-shadow(0px 0px 6px #666);
+	}
+
+	.hide-shadow {
+		background-color: white;
+		height: 18px;
+		position: absolute;
+		top: 50px;
+		width: 100%;
+		z-index: 991;
+	}
+
+	.header {
+		background-color: white;
+		margin-top: 0px;
+		text-align: center;
+		z-index: 0;
+	}
+
+	.header a {
+		border: 0px solid white;
+		border-radius: 0px;
+		color: white;
+		font-family: 'Nanum Gothic', sans-serif;
+		font-size: 0rem;
+		padding-bottom: 0px;
+		padding-left: 0px;
+		padding-right: 0px;
+		padding-top: 0px;
+		text-align: center;
+		transition-duration: 0.4s;
+		-webkit-transition-duration: 0.4s;
+	}
+
+	.header a:hover{
+		background-color: white;
+		border-color: white;
+		color: white;
+		cursor: pointer;
+	}
+
+	a.login {
+		border: 0px solid white;
+		color: white;
+	}
+
+	a.login:hover {
+		background-color: white;
+		border-color: white;
+		color: white;
+	}
+
+	a.sign_up {
+		background-color: white;
+		border: 0px solid white;
+		color: white;
+	}
+
+	a.sign_up:hover {
+		background-color: white;
+		border-color: white;
+		color: white;
+	}
+}
+
 
 /* Animations - Decided not to use these, might use them later
 @-webkit-keyframes image_blur {
